Improve logging formatting.

--- a/open3mod/LogViewer.resx
+++ b/open3mod/LogViewer.resx
@@ -123,4 +123,81 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>146, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAAAwAAAAQAAAAEAAAABAAAAAMAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAAAwAAAAoAAAASAAAAFwAAABgAAAAXAAAAEgAAAAoAAAADAAAAAQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAAgAAAAPAAAAJgAAAD8AAABPAAAAUwAAAE8AAAA/AAAAJgAAABAAAAADAAAAAQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAADAAAADwAFFkQACzF+ADLr/wAy6/8AMuv/ADLr/wAy6/8ACzF+AAYcXgAA
+        AAoAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAkAAAAlAAsxfgAglcQAMuv/ADLr/wAy6/8AMuv/ADLr/wAg
+        lcQACzF+AAAAJgAAAAoAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAEQAAAD8AMuv/ADLr/wAy6/8AMuv/ADLr/wAy
+        6/8AMuv/ADLr/wAy6/8AAAA/AAAAEgAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAXAAAATwAy6/8AMuv/ADLr/wAy
+        6/8AMuv/ADLr/wAy6/8AMuv/ADLr/wAAAE8AAAAXAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAABgAAABUADLr/zFZ
+        7//J1Pv/ydT7/wk57P8AMuv/CTns/2+L9P8AMuv/AAAAVAAAABkAAAAEAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAGgAA
+        AFYAMuv/1N38//j5/v//////9vj+/wAy6//2+P7//////7bE+f8AAABVAAAAGQAAAAQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAYAAQcgAAACX7bE+f///////////////////////////////////////////wAAAlgAAAAaAAAABAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAACAAMQDgACCTK2t7jY////////////////////////////////////////////////AAEEXwAB
+        ByEAAAAGAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAAYAAQgbAAEJTv//////////////////////////////////////////////////
+        //+2t7jYAAEFLwAAAAwAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAEAAAACAAIMEwABCDe2t7nY//////////////////////////8ABBK6////////
+        //////////////////8AAQZFAAILFQAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAgAAQUptre50v//////////////////////////tri/3wAG
+        HpHp6en//////////////////////wABB1sAAQcfAAAABgAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAGAAEIGwABBkr//////////////////////////7a5
+        wd0ACjNlAAkucJCSmv//////////////////////tre52AACCTAAAxINAAAAAgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAABEAAAQ1tra31///////////////////
+        ////////AAoyZwAQTEoADUBXkJShzP//////////////////////////AAEHQwACCxQAAAADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAALAAAAKLa2t9L/////////////
+        /////////////7a5wdgADkRLABRhOgAQT0cACSt4//////////////////////////8AAQVTAAEJGgAA
+        AAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAABgAAABkAAABJ////////
+        //////////////////+2uL7bAAs2TgATWjQAF24vABJUPQAJK2vp6en//////////////////////wAB
+        BV4AAQcgAAAABgAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAwAAAAcAAAATAAAANba2
+        ttf//////////////////////////wAGH1kADkUzABdvJgAZdSYAE1kyAAovWpCSmv//////////////
+        ////////tra32AAAADAAAAANAAAAAgAAAAEAAAAAAAAAAAAAAAAAAAABAAAAAwAAAAoAAAATAAAAHgAA
+        ADa2trbU//////////////////////////+2t7rUAAgmNwASVSEAGXUcABl1HgATWicACjFDkJKaxv//
+        ////////////////////////AAAAUAAAACEAAAAJAAAAAgAAAAEAAAAAAAAAAgAAAAYAAAAQAAAAJgAA
+        AEAAAABYAAAAd///////////////////////////tre42QADDj8ACSwgABFRFwAVZhcAFmcZABJWHgAK
+        LzEAAxJm3t7e//////////////////////8AAACCAAAATgAAACgAAAANAAAACgAAAAIAAAAEAAAADQAG
+        HF4ACzF+ADLr/wAy6/+oufj///////////////////////////8AAQRkAAIMNwAFGCYABiAkAAgmJQAJ
+        KyYACCgpAAUaNgACDGD//////////////////////////zZd7/8AMuv/ACSo0QAAABYAAAANAAAABAAA
+        AAoAAAAmAAsxfgAglcQAMuv/dZD0////////////////////////////AAAArAAAAX0AAAJiAAEFWgAB
+        B1oAAgpcAAIKXAACCl0AAglkAAEFfgAAAq3/////////////////////ydT7/wAy6/8AMuv/ACSo0AAA
+        ACYAAAAKAAAAEgAAAD8AMuv/ADLr/wAy6/+oufj/e5T0/+/y/f/5+v7/////////////////////////
+        ///////////////////////////////////////////////////////////////////J1Pv/ADLr/wAy
+        6/8AMuv/AAAAPwAAABIAAAAXAAAATwAy6/8AMuv/ADLr/wAy6/8AMuv/bYrz/+/y/f//////////////
+        ///////////////////////////////////////////////////////////////////+/v//ws76/xA/
+        7f8AMuv/ADLr/wAy6/8AAABPAAAAFwAAABgAAABTADLr/wAy6/8AMuv/ADLr/wAy6/8AMuv/ADLr////
+        /////////////////////////////////////////////////////////////////////////////+/y
+        /f89Y/D/ATPr/wAy6/8AMuv/ADLr/wAAAFMAAAAYAAAAFwAAAE8AMuv/ADLr/wAy6/8AMuv/ADLr/wk5
+        7P/2+P7/////////////////////////////////////////////////////////////////////////
+        ////////kKb2/wAy6/8AMuv/ADLr/wAy6/8AMuv/AAAATwAAABcAAAASAAAAPwAy6/8AMuv/ADLr/wAy
+        6/8AMuv/b4v0////////////////////////////////////////////////////////////////////
+        ////////////////////////PmPw/wAy6/8AMuv/ADLr/wAy6/8AAAA/AAAAEgAAAAoAAAAmAAsxfgAg
+        lcQAMuv/ADLr/wAy6/8AMuv/ADLr/wAy6/8AAAB3AAAAXgAAAFcAAABVAAAAVQAAAFUAAABVAAAAVQAA
+        AFUAAABXAAAAXgAAAHcAMuv/ADLr/0Rp8P9vi/T/ADLr/wAy6/8AIJXEAAsxfgAAACYAAAAKAAAABAAA
+        AA0ABhxeAAsxfgAy6/8AMuv/ADLr/wAy6/8AMuv/ACSo0QAAADUAAAAgAAAAGgAAABkAAAAZAAAAGQAA
+        ABkAAAAZAAAAGQAAABoAAAAgAAAANQAkqNEAMuv/ADLr/wAy6/8AMuv/ADLr/wALMX4ABhxeAAAADQAA
+        AAQAAAACAAAABgAAABAAAAAmAAAAPwAAAE8AAABTAAAATwAAAD8AAAAmAAAAEQAAAAcAAAAEAAAABAAA
+        AAQAAAAEAAAABAAAAAQAAAAEAAAABAAAAAcAAAARAAAAJgAAAD8AAABPAAAAUwAAAE8AAAA/AAAAJgAA
+        ABAAAAAGAAAAAgAAAAAAAAABAAAAAwAAAAoAAAASAAAAFwAAABgAAAAXAAAAEgAAAAoAAAADAAAAAQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAMAAAAKAAAAEgAAABcAAAAYAAAAFwAA
+        ABIAAAAKAAAAAwAAAAEAAAAA//////////////////8H///+A////AH///wB///8Af///AH///wB///4
+        Af//+AD///AA///gAP//4GB//8Dgf/+A8H//gfB//wPwP/4D8D/+B/gf8A/4B+AP+APAAAADwAAAA8AA
+        AAPAAAADwAAAA+A//AfwP/wP//////////8=
+</value>
+  </data>
 </root>
